2005-12-12  Edward Hervey  <edward@fluendo.com>

	* examples/gstfile.py:
	Moved the Discoverer class to gst.extend
	Now works asynchronous... bl**dy fast :)
	* gst/extend/Makefile.am:
	* gst/extend/discoverer.py:
	Discoverer has landed in extend and is now asynchronous.
	It emits a 'discovered' signal when it has finished.

2005-12-09  Edward Hervey  <edward@fluendo.com>

	* gst/arg-types.py:
	This covers for the codegenerator not being able to handle
	(unsigned) int64 as parameters and return values.

2005-12-09  Edward Hervey  <edward@fluendo.com>

	* gst/arg-types.py:
	Added (reverse_)wrapper for GBoxed and GstMiniObject
	* gst/gst.defs:
	push_event() and chain() takes the reference on the
	MiniObject.

2005-12-07  Edward Hervey  <edward@fluendo.com>

	* gst/gstmessage.override:
	Fix for memleak

=== release 0.10.0 ===

2005-12-05   <thomas (at) apestaart (dot) org>

	* configure.ac:
	  releasing 0.10.0, "Reblochon"

2005-12-05  Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs: (alloc_buffer_and_set_caps): 
	Wrapped last pre-0.10 API update (I hope...)

	* examples/gstfile.py: (Discoverer._new_decoded_pad_cb): 
	Fix for fractional framerates.

2005-12-05  Andy Wingo  <wingo@pobox.com>

	* testsuite/test_registry.py (RegistryTest.testPluginList): Look
	for staticelements, not gstcoreelements.

=== release 0.9.7 ===

2005-12-01   <thomas (at) apestaart (dot) org>

	* configure.ac:
	  releasing 0.9.7, "Mon Chien N'a Pas De Nez"

2005-12-01  Andy Wingo  <wingo@pobox.com>

	* configure.ac (GST_PLUGINS_BASE_LIBS): Check for
	gstreamer-plugins-base.pc, the one that has the interfaces etc.

	* gst/Makefile.am (interfaces_la_CFLAGS, interfaces_la_LDFLAGS):
	PLUGINS_BASE, not BASE.

2005-11-30  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* gst/Makefile.am:
	gst-interfaces-0.9.pc is no more, update to new use
	* testsuite/test_element.py:
	Fix for queue modification

2005-11-30  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	* gst/gst.defs: