@@ -20,22 +20,17 @@ pygst.py: $(top_srcdir)/pygst.py.in Makefile
 	chmod -w $@
 
 # rewrite pygst path in installed pygst.py, install pth file.
-install-data-local: Makefile
-	$(mkinstalldirs) $(DESTDIR)$(pythondir)
-	sed -e "s|@PYGSTDIR\@|$(PYTHONDIR)/gst-$(GST_MAJORMINOR)|g" \
-	    -e "s|@GST_MAJORMINOR\@|$(GST_MAJORMINOR)|g" \
-	    $(srcdir)/pygst.py.in > $(DESTDIR)$(pythondir)/pygst.py
-	chmod 644 $(DESTDIR)$(pythondir)/pygst.py
-	echo "gst-$(GST_MAJORMINOR)" > $(DESTDIR)$(pythondir)/pygst.pth
-
-# also install pth file in pyexec.
-install-exec-local:
+# they go in pyexecdir, should make 64bit users happy
+install-exec-local: Makefile
 	$(mkinstalldirs) $(DESTDIR)$(pyexecdir)
+	sed -e "s|@PYGSTDIR\@|$(PYEXECDIR)/gst-$(GST_MAJORMINOR)|g" \
+            -e "s|@GST_MAJORMINOR\@|$(GST_MAJORMINOR)|g" \
+            $(srcdir)/pygst.py.in > $(DESTDIR)$(pyexecdir)/pygst.py
+	chmod 644 $(DESTDIR)$(pyexecdir)/pygst.py
 	echo "gst-$(GST_MAJORMINOR)" > $(DESTDIR)$(pyexecdir)/pygst.pth
 
 uninstall-local:
-	@rm $(DESTDIR)/$(pythondir)/pygst.py > /dev/null 2>&1 || true
-	@rm $(DESTDIR)/$(pythondir)/pygst.pth > /dev/null 2>&1 || true
+	@rm $(DESTDIR)/$(pyexecdir)/pygst.py > /dev/null 2>&1 || true
 	@rm $(DESTDIR)/$(pyexecdir)/pygst.pth > /dev/null 2>&1 || true
 
 check-valgrind:
